[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
git-changelog = ">=0.5.0"
httpx = ">=0.16.1"
jinja2-cli = ">=0.7.0"
toml = ">=0.10.2"

[tool.poetry]
name = "volttron-bacnet-proxy"
version = "0.1.0"
description = "BACnet Proxy is an agent that supports communication and management of BACnet devices."
authors = ["Mark Bonicillo <mark.bonicillo@pnnl.gov>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/VOLTTRON/volttron-bacnet-proxy"
homepage = "https://github.com/VOLTTRON/volttron-bacnet-proxy"
keywords = ["volttron", "agent"]
packages = [ { include = "volttron_bacnet_proxy", from = "src" } ]
classifiers = [
    "Framework :: VOLTTRON",
    "Framework :: VOLTTRON :: Agent",
    "Framework :: VOLTTRON :: 0.1.0"
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
bacpypes = "0.16.7"
volttron = "^10.0.1-alpha.13"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mock = "^4.0.3"
pre-commit = "^2.17.0"
yapf = "^0.32.0"
toml = "^0.10.2"
isort = "^5.10.1"
safety = "^1.10.3"
mypy = "^0.942"
coverage = "^6.3.2"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.scripts]
volttron-bacnet-proxy = "volttron_bacnet_proxy.agent:main"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]
